Fix wrong line break in navigation

--- a/Server/grails-app/assets/stylesheets/main.css
+++ b/Server/grails-app/assets/stylesheets/main.css
@@ -88,7 +88,7 @@ header .inside #userinfo .actions #logoutFrom {
 }
 #container nav {
 	float: left;
-	width: 190px;
+	width: 208px;
 	background-color: #eeeeee;
     border-left: 1px solid #cccccc;
     border-right: 1px solid #cccccc;
@@ -158,7 +158,7 @@ header .inside #userinfo .actions #logoutFrom {
 	position: relative;
 	background-color: #ffffff;
     border-right: 1px solid #DDDDDD;
-    margin-left: 192px;
+    margin-left: 210px;
     padding: 40px 60px 20040px;
     margin-bottom: -20000px;
 }
